--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -19,7 +19,7 @@
     <main class="container">
         <h1>Lista de Tarefas</h1>
 
-        {% if todos %}
+        {% if todo_list %}
         <table class="table">
             <thead>
               <tr>
@@ -32,7 +32,7 @@
               </tr>
             </thead>
             <tbody>
-                {% for todo in todos %}
+                {% for todo in todo_list %}
                 <tr>
                     <th scope="row">{{ todo.pk }}</th>
                     <td>{{ todo.title }}</td>
@@ -52,6 +52,8 @@
         {% else %}
           <p>Não há tarefas cadastradas</p>
         {% endif %}
+
+        <a href="{% url 'todo_create' %}" class="btn btn-primary btn-sm">Criar nova tarefa</a>
         
     </main>
 
