--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -1,63 +1,48 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-    <title>TWTodos - Lista de Tarefas</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    
-    <nav class="navbar bg-dark mb-4" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">TWTodos</a>
-        </div>
-    </nav>
+{% extends "base.html" %}
 
-    <main class="container">
-        <h1>Lista de Tarefas</h1>
+{% block page_title %}
+  Lista de Tarefas
+{% endblock page_title %}
 
-        {% if todo_list %}
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Título</th>
-                <th scope="col">Criado em</th>
-                <th scope="col">Data limite</th>
-                <th scope="col">Finalizado em</th>
-                <th scope="col">Ações</th>
-              </tr>
-            </thead>
-            <tbody>
-                {% for todo in todo_list %}
-                <tr>
-                    <th scope="row">{{ todo.pk }}</th>
-                    <td>{{ todo.title }}</td>
-                    <td>{{ todo.created_at }}</td>
-                    <td>{{ todo.deadline }}</td>
-                    <td>{{ todo.finished_at|default:"-" }}</td>
-                    <td>
-                        <a href="#" class="btn btn-primary btn-sm">Concluir</a>
-                        <a href="#"class="btn btn-danger btn-sm">Excluir</a>
-                    </td>
-                </tr>
-                {% endfor %}
-              
-            </tbody>
-          </table>
+{% block content %}
 
-        {% else %}
-          <p>Não há tarefas cadastradas</p>
-        {% endif %}
+  <h1>Lista de Tarefas</h1>
 
-        <a href="{% url 'todo_create' %}" class="btn btn-primary btn-sm">Criar nova tarefa</a>
+  {% if todo_list %}
+  <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Título</th>
+          <th scope="col">Criado em</th>
+          <th scope="col">Data limite</th>
+          <th scope="col">Finalizado em</th>
+          <th scope="col">Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+          {% for todo in todo_list %}
+          <tr>
+              <th scope="row">{{ todo.pk }}</th>
+              <td>{{ todo.title }}</td>
+              <td>{{ todo.created_at }}</td>
+              <td>{{ todo.deadline }}</td>
+              <td>{{ todo.finished_at|default:"-" }}</td>
+              <td>
+                  <a href="#" class="btn btn-primary btn-sm">Concluir</a>
+                  <a href="{% url 'todo_update' pk=todo.pk %}" class="btn btn-secondary btn-sm">Editar</a>
+                  <a href="#"class="btn btn-danger btn-sm">Excluir</a>
+              </td>
+          </tr>
+          {% endfor %}
         
-    </main>
+      </tbody>
+    </table>
 
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+  {% else %}
+    <p>Não há tarefas cadastradas</p>
+  {% endif %}
+
+  <a href="{% url 'todo_create' %}" class="btn btn-primary btn-sm">Criar nova tarefa</a>
+
+{% endblock content %}
