Alteração no botão concluir. Ao clicar em 'Concluir', a tarefa é riscada e o botão transforma no botão 'Retomar'

--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -12,7 +12,6 @@
   <table class="table">
       <thead>
         <tr>
-          <th scope="col">#</th>
           <th scope="col">Título</th>
           <th scope="col">Criado em</th>
           <th scope="col">Data limite</th>
@@ -23,16 +22,19 @@
       <tbody>
           {% for todo in todo_list %}
           <tr>
-              <th scope="row">{{ todo.pk }}</th>
-              <td>{{ todo.title }}</td>
-              <td>{{ todo.created_at }}</td>
-              <td>{{ todo.deadline }}</td>
-              <td>{{ todo.finished_at|default:"-" }}</td>
-              <td>
-                  <a href="{% url 'todo_complete' pk=todo.pk %}" class="btn btn-primary btn-sm {% if todo.finished_at %}disabled{% endif %}">Concluir</a>
-                  <a href="{% url 'todo_update' pk=todo.pk %}" class="btn btn-secondary btn-sm {% if todo.finished_at %}disabled{% endif %}">Editar</a>
-                  <a href="{% url 'todo_delete' pk=todo.pk %}"class="btn btn-danger btn-sm">Excluir</a>
-              </td>
+            <td>{% if todo.finished_at %}<s>{% endif %}{{ todo.title }}{% if todo.finished_at %}</s>{% endif %}</td>
+            <td>{% if todo.finished_at %}<s>{% endif %}{{ todo.created_at }}{% if todo.finished_at %}</s>{% endif %}</td>
+            <td>{% if todo.finished_at %}<s>{% endif %}{{ todo.deadline }}{% if todo.finished_at %}</s>{% endif %}</td>
+            <td>{{ todo.finished_at|default:"-" }}</td>
+            <td>
+              {% if todo.finished_at %}
+                <a href="{% url 'todo_complete' pk=todo.pk %}" class="btn btn-dark btn-sm">Retomar</a>
+              {% else %}
+                <a href="{% url 'todo_complete' pk=todo.pk %}" class="btn btn-outline-primary btn-sm">Concluir</a>
+              {% endif %}
+              <a href="{% url 'todo_update' pk=todo.pk %}" class="btn btn-secondary btn-sm {% if todo.finished_at %}disabled{% endif %}">Editar</a>
+              <a href="{% url 'todo_delete' pk=todo.pk %}"class="btn btn-danger btn-sm">Excluir</a>
+            </td>
           </tr>
           {% endfor %}
         
